@@ -229,6 +229,7 @@ void caml_empty_minor_heap (void)
   uintnat prev_alloc_words;
 
   if (caml_young_ptr != caml_young_end){
+    if (caml_minor_gc_begin_hook != NULL) (*caml_minor_gc_begin_hook) ();
     prev_alloc_words = caml_allocated_words;
     caml_in_minor_collection = 1;
     caml_gc_message (0x02, "<", 0);
@@ -256,8 +257,9 @@ void caml_empty_minor_heap (void)
     caml_in_minor_collection = 0;
     caml_stat_promoted_words += caml_allocated_words - prev_alloc_words;
     ++ caml_stat_minor_collections;
+    caml_final_empty_young ();
+    if (caml_minor_gc_end_hook != NULL) (*caml_minor_gc_end_hook) ();
   }
-  caml_final_empty_young ();
 #ifdef DEBUG
   {
     value *p;
@@ -280,7 +282,9 @@ CAMLexport void caml_minor_collection (void)
   caml_major_collection_slice (0);
   caml_force_major_slice = 0;
 
+  if (caml_finalise_begin_hook != NULL) (*caml_finalise_begin_hook) ();
   caml_final_do_calls ();
+  if (caml_finalise_end_hook != NULL) (*caml_finalise_end_hook) ();
 
   caml_empty_minor_heap ();
 }
