@@ -29,6 +29,10 @@ Tools:
 - PR#6641: add -g, -ocamlcflags, -ocamloptflags options to ocamlmklib
   (Peter Zotov)
 
+Runtime:
+- PR#6675: GC hooks
+  (Damien Doligez and Roshan James)
+
 Bug fixes:
 - PR#5836, PR#6684: printing lazy values in ocamldebug may segfault
   (Gabriel Scherer)
